--- a/scrollbox/ScrollBox.scss
+++ b/scrollbox/ScrollBox.scss
@@ -47,19 +47,29 @@
         isolation: isolate;
         inset: 0px;
 
+        //
         contain: content;
         container-type: size;
         background-color: transparent;
 
+        //
         scroll-timeline: --scroll-y block, --scroll-x inline;
         scrollbar-gutter: stable both-edges;
         scrollbar-width: none;
         
         //
-        will-change: scroll-position, contents;
-        
-        //
         --sb-color: #101010;
+
+        //
+        &, & > :where(*) {
+             //
+            will-change: scroll-position, contents;
+            touch-action: pan-x pan-y manipulation;
+            
+            //
+            pointer-events: auto;
+            pointer-events: bounding-box;
+        }
 
         //
         & :where(.scrollbar-x, .scrollbar-y) {
